refactor(tray): allow programmatic checked state updating for submenus